# ria_yaho

./: .gitignore  169.254.6-metadata.json  MAPPING_PLAN.md  README.md  agent_plan.md  calibrate_imu_manual.py  chomo.md  frames_2026-06-18_21.02.23.gv  go2_mapping.launch.py
install/: local_setup.sh  setup.sh
install/ouster_ros/include/optional-lite/nonstd/: optional.hpp
install/ouster_ros/include/ouster/: array_view.h  beam_config.h  cartesian.h  chanfield.h  client.h  cloud_io.h  compat_ops.h  coord.h  defaults.h  deprecation.h  downsample.h  eigen.h  error_handler.h  field.h  image_processing.h  io_type.h  json_tools.h  lidar_scan.h  lidar_scan_set.h  mesh.h  metadata.h  normals.h  open_source.h  packet.h  packet_source.h  pose_conversion.h  pose_util.h  ray.h  scan_source.h  scan_source_utils.h  sensor_http.h  sensor_packet_source.h  sensor_scan_source.h  sha256.h  stl.h  triangle.h  typedefs.h  types.h  vector_streambuf.h  version.h  (+7 more)
install/ouster_ros/include/ouster/impl/: build.h  client_poller.h  cuda_macros.h  downsample_impl.h  idx_range.h  iterator_base.h  json_tools.h  lidar_scan_impl.h  logging.h  netcompat.h  open_source_impl.h  packet_writer.h  profile_extension.h  ring_buffer.h  threadpool.h  threadsafe_queue.h  transform_homogeneous.h  transform_quaternion.h  transform_typedefs.h  transform_vector.h  transformation.h
install/ouster_ros/include/ouster_ros/: common_point_types.h  os_point.h  os_processing_node_base.h  os_ros.h  os_sensor_node_base.h  sensor_point_types.h  visibility_control.h
install/ouster_ros/lib/cmake/OusterSDK/: Coverage.cmake  FindCURL.cmake  FindEigen3.cmake  FindPcap.cmake  Findglfw3.cmake  Findlibtins.cmake  Findlibzip.cmake  OusterSDKConfig.cmake  OusterSDKConfigVersion.cmake  VcpkgEnv.cmake
install/ouster_ros/lib/ouster_ros/: os_cloud  os_driver  os_image  os_replay  os_sensor
install/ouster_ros/share/: LICENSE  LICENSE-bin
install/ouster_ros/share/ouster_ros/: LICENSE  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ouster_ros/share/ouster_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ouster_rosConfig-version.cmake  ouster_rosConfig.cmake
install/ouster_ros/share/ouster_ros/config/: community_driver.rviz  community_driver_config.yaml  driver_params.yaml  metadata-qos-override.yaml  os_sensor_cloud_image_params.yaml  viz-reliable.rviz  viz.rviz
install/ouster_sensor_msgs/share/ouster_sensor_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/unitree_api/share/unitree_api/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/unitree_go/share/unitree_go/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/unitree_hg/share/unitree_hg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/unitree_ros2_example/: g1_ankle_swing_example  g1_arm_action_example  g1_arm_sdk_dds_example  g1_audio_client_example  g1_dex3_example  g1_dual_arm_example  g1_loco_client_example  g1_low_level_example  go2_robot_state_client  go2_sport_client  go2_stand_example  h2_ankle_swing_example  h2_loco_client  low_level_ctrl  low_level_ctrl_hg  read_low_state  read_low_state_hg  read_motion_state  read_wireless_controller
install/unitree_ros2_example/share/unitree_ros2_example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/unitree_sdk2/share/unitree_sdk2/: package.ps1  package.sh
log/: latest_build
scripts/: go2_mapping_ready.sh
src/FAST_LIO/: CMakeLists.txt
src/FAST_LIO/Log/: mat_pre.txt
src/FAST_LIO/config/: ouster64.yaml
src/FAST_LIO/launch/: imu_odometry_test.launch.py
src/FAST_LIO/rviz_cfg/: fastlio_odom_only.rviz
src/FAST_LIO/traj/: trajectory.txt
src/elevation_mapping_cupy/elevation_mapping_cupy/: package.xml
src/elevation_mapping_cupy/elevation_mapping_cupy/elevation_mapping_cupy/: elevation_mapping.py  traversability_filter.py
src/go2_motion_ws/: CMakeLists.txt  package.xml
src/go2_motion_ws/src/: cmd_vel_to_go2.cpp  movefoward.cpp  stand  stand.cpp
src/go2_slam_2d_3d/src/LIO-SAM-ros2/: CMakeLists.txt  package.xml
src/go2_traversability/: CMakeLists.txt  package.xml
src/go2_traversability/config/: elevation.rviz  nav2_params.yaml  nav2_planner_only_params.yaml  plan_on_map.rviz  view_2dmap.rviz
src/go2_traversability/launch/: fastlio_odom_test.launch.py  full_elevation.launch.py  imu_odometry_test.launch.py  liosam_go2_test.launch.py  liosam_odom_test.launch.py  nav2_liosam.launch.py  nav2_planner_only.launch.py  plan_on_map.launch.py  sensor_odom_bringup.launch.py  view_2dmap.launch.py
src/go2_traversability/scripts/: auto_save_map.py  check_elev.py  click_path.py  cmd_vel_to_unitree.py  compute_nav2_path.py  pcd_to_2dmap.py  scan_debug_points.py
src/ouster-ros/ouster-ros/config/: driver_params.yaml
src/pgo/config/: pgo.yaml
src/pgo/src/: pgo_node.cpp
src/pgo/src/pgos/: simple_pgo.cpp
src/unitree_ros2/: setup.sh  setup_default.sh
(+1049 files in other folders)
